<resources>
    <string name="app_name">TrackRecorder</string>
    <string name="nav_header_desc">Header</string>
    <string name="menu_map">Map</string>
    <string name="menu_history">History</string>
    <string name="menu_signout">Logout</string>
    <string name="action_settings">Action settings string</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_logout">LOGOUT</string>
    <string name="title_history">HISTORY</string>
    <string name="title_sign_in">REGISTER</string>
    <string name="title_login">LOGIN</string>
    <string name="title_home">MAP</string>


    <string name="maps_api_key">AIzaSyATP0AHZRzi62iaGN5XE6kmCl-5DXmFZjg</string>
    <string name="calendar_history">Calendar</string>
    <string name="e_mail_label">E-mail</string>
    <string name="enter_your_e_mail_hint">Enter your E-mail</string>
    <string name="password_label">Password</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="register_button">REGISTER</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="register_new_user_link">Register New User</string>
    <string name="message_record_text">Record started - your location is saving</string>
    <string name="notificaton_channel_description">Allow record location in background</string>
    <string name="logout_dialog_message">Really Logout?</string>
    <string name="logout_dialog_ok">OK</string>
    <string name="logout_dialog_cancel">CANCEL</string>
    <string name="toast_record_stopped">Record Stopped</string>
    <string name="toat_record_started">Record Started</string>]
</resources>