<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <data>

        <import type="com.example.trackrecorder.ui.login.LoginFragmentViewModel" />

        <import type="com.example.trackrecorder.ui.login.LoginFragment" />

        <variable
            name="model_login"
            type="LoginFragmentViewModel" />

        <variable
            name="fragment"
            type="LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="30dp"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emailLabel"
                style="@style/LoginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_label"
                app:layout_constraintBottom_toTopOf="@id/emailInput"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_e_mail_hint"
                android:inputType="textEmailAddress"
                android:text="@={model_login.userRequest.email}"
                app:error_field="@{model_login.errorObservable.emailError}"
                app:layout_constraintBottom_toTopOf="@id/passwordLabel"
                app:layout_constraintTop_toBottomOf="@id/emailLabel" />

            <TextView
                android:id="@+id/passwordLabel"
                style="@style/LoginLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                app:layout_constraintBottom_toTopOf="@id/passwordInput"
                app:layout_constraintTop_toBottomOf="@id/emailInput" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password_hint"
                android:inputType="textPassword"
                android:text="@={model_login.userRequest.password}"
                app:error_field="@{model_login.errorObservable.passwordError}"
                app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
                app:layout_constraintTop_toBottomOf="@id/passwordLabel" />

            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:onClick="@{()->model_login.loginButtonPress()}"
                android:text="@string/sign_in_button"
                app:layout_constraintBottom_toTopOf="@id/registerLink"
                app:layout_constraintTop_toBottomOf="@id/passwordInput" />

            <TextView
                android:id="@+id/registerLink"
                style="@style/LinkRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/register_new_user_link"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
                app:layout_constraintTop_toBottomOf="@id/buttonSignIn" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
